--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,14 +3,19 @@
     border-radius: 20px;
     box-shadow: 10px 10px 10px 10px rgba(0,0,0,0.1);
 }
-
-
-
-
 .login-icon a{
     padding:10px;
 }
 
 .login-icon i{
     font-size:23px;
+}
+
+/* Dashboard Page Section */
+.dashboard-header{
+    background-color: #2c3e50;
+    color:white;
+}
+.dashboard-header .navbar-brand i{
+    color:white;
 }
